--- a/notebooks/r/01_EDA/emt_classification.Rmd
+++ b/notebooks/r/01_EDA/emt_classification.Rmd
@@ -257,8 +257,18 @@ autoplot(cm, type = "heatmap") +
   scale_y_discrete(breaks=c("0","1"),
         labels=c("Epithelial", "Mesenchymal")) + 
   xlab("CCLE Annotation") +
-  ylab("EMT Marker Label (thresh = 7)") +
-  scale_fill_gradient(low="white", high="#D00000")
+  ylab("EMT Marker Label") +
+  scale_fill_gradient(low="white", high="#D00000") +
+  theme(plot.title = element_text(size=16),
+        legend.text=element_text(size=16),
+        axis.title.x=element_text(size=16),
+        axis.title.y=element_text(size=16),
+        axis.text.x=element_text(size=16),
+        axis.text.y=element_text(size=16),
+        #legend.position=c(0.05, 0.15),
+        legend.box="vertical",
+        legend.margin=margin(),
+        text=element_text(family="sans"))
 ```
 
 Save the data
